# task-manager-api

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240101000001_create_users.sql  20240101000002_create_tasks.sql  20240101000003_create_login_challenges.sql  20240101000004_create_email_logs.sql
src/: lib.rs  main.rs  openapi.rs
src/cache/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: auth.rs  dev.rs  mod.rs  seed.rs  tasks.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
src/services/: mod.rs
tests/: integration_tests.rs
