[package]
name = "task-manager-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "task-manager-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
dashmap = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }